# rfsoc-interface

./: .gitignore  MAKEFILE  Makefile  README.md  data_handler.py  defaults.yaml  generalConfig.conf  kidpy.py  onr_fit_lo_sweeps.py  onr_motor_control.py  onr_process_observation.py  onrkidpy.py  pyproject.toml  rfsoc_config_default.yml  settings.toml  settings_caltech.toml  sweeps.py  transceiver.py  udp2.py  udpcap.py  valon5009.py  vimba_camera_control.py
.github/workflows/: ci.yaml
rfsocinterface/: __init__.py  __main__.py  camera.py  channel_settings.py  initialization.py  loconfig.py  lodiagnostics.py  losweep.py  progress_bar.py  qconcurrent.py  telescope.py  utils.py
rfsocinterface/ui/: __init__.py  blit_manager.py  canvas.py  channel_settings_ui.py  controller.py  controller_ui.py  editbutton.py  file_upload.py  file_upload_ui.py  full_ui_ui.py  icons_rc.py  initialization_ui.py  joystick.py  lineedit.py  loconfig_ui.py  loconfig_uic.py  lodiagnostics_ui.py  lodiagnostics_uic.py  loprogress_ui.py  loresonator_ui.py  progress_bar_ui.py  section.py  telescope_control_ui.py
rfsocinterface/ui/losweep/: loconfig.py  loconfig.ui
tests/: __init__.py  test_progress_bar.py
ui_resources/: channel_settings.ui  controller.ui  editbutton.ui  file_upload.ui  full_ui.ui  icons.qrc  initialization.ui  loconfig.ui  lodiagnostics.ui  loprogress.ui  loresonator.ui  progress_bar.ui  telescope_control.ui
ui_resources/losweep/: loconfig.ui
